fix: stretch/height issue in chrome

--- a/app/assets/stylesheets/herois.scss
+++ b/app/assets/stylesheets/herois.scss
@@ -14,7 +14,6 @@ body {
 body {
   display: flex;
   flex-direction: column;
-  align-content: stretch;
 }
 
 main,
@@ -25,6 +24,11 @@ footer {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  min-height: max-content;
+}
+
+main {
+  align-content: stretch;
 }
 
 header,
